--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wbpack Exercise</title>
+  <title>itunes eBooks</title>
 </head>
-
 <body>
-  <header></header>
+  <header>
+    <div class="logo">
+      <h1>
+        itunes eBooks
+      </h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Literature</a></li>
+        <li><a href="#">Business</a></li>
+      </ul>
+    </nav>
+  </header>
   <main></main>
   <footer></footer>
 </body>
-
 </html>
