Add footer section
Includes:

- our own copyright.
- iTunes copyright.

Add:

- great-books-logo.png for review.

Update:

- style.css for footer fonts and background setup.

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>itunes eBooks</title>
 </head>
+
 <body>
   <header>
     <div class="logo">
@@ -21,6 +23,17 @@
     </nav>
   </header>
   <main></main>
-  <footer></footer>
+  <footer>
+    <div id="footer-div">
+      <div id="footer-left">
+        <h3>greatBooks</h3>
+        <h4>Copyrigth 2022 greatBooks, Inc.</h4>
+      </div>
+      <div id="footer-right">
+        <h5>iTunes - Copyright © 2022 Apple Inc. All rights reserved</h5>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
