--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,11 @@
       </ul>
     </nav>
   </header>
-  <main></main>
+  <main>
+    <div id="ebook-list">
+
+    </div>
+  </main>
   <footer>
     <div id="footer-div">
       <div id="footer-left">
