Fix reviewer suggested issues

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Literature</a></li>
-        <li><a href="#">Business</a></li>
+        <li id="history"><a href="#">History</a></li>
+        <li id="literature"><a href="#">Literature</a></li>
+        <li id="business"><a href="#">Business</a></li>
       </ul>
     </nav>
   </header>
